Added AI and Database as external library.